Removed useless template artifacts, made basic CSS

--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -1,25 +1,17 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Werewolves2</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
+﻿<h4 class="navbar-top">
+    <span class="@NavMenuCssClass">Werewolves</span> <span class="navbar-toggler" @onclick="ToggleNavMenu">@NavMenuExpanded</span>
+</h4>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+<div class="@NavMenuCssClass navbar" @onclick="ToggleNavMenu">
+    <ul class ="navbar-content">
+        <li>
+            <NavLink class="btn btn-navbar" href="Host">
+                <span aria-hidden="true"></span> Host
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Host">
-                <span class="oi oi-plus" aria-hidden="true"></span> Host
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="client">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Join
+        <li>
+            <NavLink class="btn btn-navbar" href="Client">
+                <span aria-hidden="true"></span> Join
             </NavLink>
         </li>
     </ul>
@@ -28,6 +20,7 @@
 @code {
     private bool collapseNavMenu = true;
 
+    private string NavMenuExpanded => collapseNavMenu ? "↦" : "↤";
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
