--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -2,7 +2,9 @@
 @using Microsoft.AspNetCore.SignalR.Client
 @inject NavigationManager NavigationManager
 
-<div class="form-group">
+<h1>Hi!</h1>
+
+@*<div class="form-group">
     <label>
         User:
         <input @bind="_userInput" />
@@ -52,4 +54,4 @@
 
     public bool IsConnected =>
         _hubConnection.State == HubConnectionState.Connected;
-}
+}*@
