--- a/Client/wwwroot/css/site.css
+++ b/Client/wwwroot/css/site.css
@@ -1,19 +1,34 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
+    background-color: black;
+    color: red;
+    max-width: 100%;
+    max-height: 100%;
     font-family: Arial, sans-serif;
 }
 
-a, .btn-link {
+a {
     color: #a81930;
 }
 
-.btn-primary {
-    color: #fff;
+.btn-navbar {
+    color: #000000;
     background-color: #981123;
-    border-color: #b9344d;
+    text-decoration: none;
+    display: inline-block;
+    border: none;
+    padding: 14px 0;
+    margin: 2px 0;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    width: 100%;
+    border-radius: 6px;
 }
-
+.btn-navbar.active {
+    background-color: rgba(255, 255, 255, 0.3);
+}
 app {
     position: relative;
     display: flex;
@@ -29,94 +44,51 @@ app {
 .main {
     flex: 1;
 }
-
-    .main .top-row {
-        background-color: #f7f7f7;
-        border-bottom: 1px solid #d6d5d5;
-        justify-content: flex-end;
-    }
-
-        .main .top-row > a, .main .top-row .btn-link {
-            white-space: nowrap;
-            margin-left: 1.5rem;
-        }
-
-        .main .top-row a:first-child {
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-
 .sidebar {
-    background-image: linear-gradient(180deg, #9b192b 0%, #470615 70%);
+    height: 100%;
+    width: auto;
+    display: flex;
+    flex-flow: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+.navbar {
+    width: 350px;
+    z-index: 1;
+    left: 0;
+    overflow-x: hidden;
+    background-color: #470911;
+    background-color: rgba(71, 9, 17, 0.5);
+    max-width: 80vw;
+    flex-grow: 1;
 }
 
-    .sidebar .top-row {
-        background-color: #000000;
-        background-color: rgba(0,0,0,0.4);
-    }
-
-    .sidebar .navbar-brand {
-        font-size: 1.1rem;
-    }
-
-    .sidebar .oi {
-        width: 2rem;
-        font-size: 1.1rem;
-        vertical-align: text-top;
-        top: -2px;
-    }
-
-    .sidebar .nav-item {
-        font-size: 0.9rem;
-        padding-bottom: 0.5rem;
-    }
-
-        .sidebar .nav-item:first-of-type {
-            padding-top: 1rem;
-        }
-
-        .sidebar .nav-item:last-of-type {
-            padding-bottom: 1rem;
-        }
-
-        .sidebar .nav-item a {
-            color: #d7d7d7;
-            border-radius: 4px;
-            height: 3rem;
-            display: flex;
-            align-items: center;
-            line-height: 3rem;
-        }
-
-            .sidebar .nav-item a.active {
-                background-color: #ffffff;
-                background-color: rgba(255,255,255,0.25);
-                color: white;
-            }
-
-            .sidebar .nav-item a:hover {
-                background-color: rgba(255,255,255,0.1);
-                color: white;
-            }
-
+.collapse {
+    width: 0;
+    display: none;
+}
+.navbar-top {
+    top: 0;
+    z-index: 2;
+    font-size: 50px;
+    width: auto;
+    flex-grow: 0;
+    text-align: center;
+    margin: 0;
+}
+.navbar .navbar-content {
+    position: absolute;
+    text-decoration: none;
+    list-style-type: none;
+    width: 100%;
+    left: 0;
+    padding: 0;
+}
 .content {
     padding-top: 1.1rem;
-}
-
-.navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
-}
-
-.valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
-}
-
-.invalid {
-    outline: 1px solid red;
-}
-
-.validation-message {
-    color: red;
+    display: flex;
+    justify-content: center;
 }
 
 #blazor-error-ui {
@@ -137,49 +109,3 @@ app {
         right: 0.75rem;
         top: 0.5rem;
     }
-
-@media (max-width: 767.98px) {
-    .main .top-row:not(.auth) {
-        display: none;
-    }
-
-    .main .top-row.auth {
-        justify-content: space-between;
-    }
-
-    .main .top-row a, .main .top-row .btn-link {
-        margin-left: 0;
-    }
-}
-
-@media (min-width: 768px) {
-    app {
-        flex-direction: row;
-    }
-
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
-    }
-
-    .main .top-row {
-        position: sticky;
-        top: 0;
-    }
-
-    .main > div {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
-
-    .navbar-toggler {
-        display: none;
-    }
-
-    .sidebar .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
-}
